2021-03-12 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSMenu.m (-_setOwnedByPopUp:): Only update the menu if
	there is a new popup.

2021-02-21 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPasteboard.m (-_pasteboardWithTarget:name:): Correct
	wrong order of arguments to NSMapInsert.
	* Source/NSPasteboard.m (-generalPasteboard): Simplify
	implementation.

2021-02-12 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSSearchFieldCell.m: Correct encoding/decoding that was
	broken in last commit of this file.

2021-02-05 Fred Kiefer <FredKiefer@gmx.de>

	* Resources/Italian.lproj/Localizable.strings,
	* Resources/Esperanto.lproj/Localizable.strings: Readd BOM which
	was lost when regenerating these files.

2021-01-22 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTableView.m (-_numRows): Take column value binding into
	consideration.
	* Source/NSTableColumn.m (-setValue:forKey:): Reload table data.

2021-01-22 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSWindow.m (GSOrderedWindows): Don't try to handle
	already gone windows that may be returned from a slow window manager.

2021-01-16 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSHorizontalTypesetter.m: Small cleanups for nerged pull request.
	* Resources: Regenerate translation files.
	* Documentation/news.texi,
	* Version: Updating documentation for the upcoming 0.29.0 release.

2021-01-15 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSControl.m: Change encoding/decoding to protect
	against differences in integer size.

2021-01-08 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSComboBoxCell.h: Correct type of instance variables.
	* Source/GSGuiPrivate.h: Add macros for encoding/decoding.
	* Source/NSActionCell.m,
	* Source/NSButtonCell.m,
	* Source/NSCell.m,
	* Source/NSComboBoxCell.m,
	* Source/NSImageCell.m,
	* Source/NSLevelIndicatorCell.m,
	* Source/NSPathCell.m,
	* Source/NSPopUpButtonCell.m,
	* Source/NSSearchFieldCell.m,
	* Source/NSSliderCell.m,
	* Source/NSStepperCell.m: Change encoding/decoding to protect