@@ -1,3 +1,13 @@
+2021-03-27 Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/NSControl.m (-textDidChange:): If there is a binding with
+	continious update, pass on the changed text.
+	* Source/GSXibElement.m: Correct the handling of boolean values in attributes.
+	* Source/GSBindingHelpers.h,
+	* Source/NSKeyValueBinding.m: Prevent recursion when
+	reverseSetValue: is used.
+	* Source/NSTextField.m (-textDidChange:): Remove empty code line.
+
 2021-03-12 Fred Kiefer <FredKiefer@gmx.de>
 
 	* Source/NSMenu.m (-_setOwnedByPopUp:): Only update the menu if
